Refactor[api]: params
