# routes/user.js
@@ -14,16 +14,16 @@ const {
     updateUserInfo
 } = require('../controller/user');
 
-// router.route('/getAllEmployee').get(HandleControllerOne).post(HandleControllerTwo);
+// router.route('/getAllEployee').get(HandleControllerOne).post(HandleControllerTwo);
 // router.post('/addEmployee', upload.single('avatar'), HandleAddEmployee);
+router.post('/', createUser);
 router.get('/', getAllUsers);
 router.put('/', updateUserInfo);
-router.post('/', createUser);
-router.get('/:id', getUserById);
+router.get('/:userId', getUserById);
 router.get('/email/:email', getUserByEmail);
 router.get('/name/:name', getUserByUsername);
-router.get('/group/:gid', getUsersByGroupId);
-router.get('/project/:pid', getUsersByProjectId);
+router.get('/group/:groupId', getUsersByGroupId);
+router.get('/project/:projectId', getUsersByProjectId);
 // router.put('/updateEmployeeById/:id', HandleUpdateEmployeeById);
 // router.patch('/patchEmployeeById/:id', HandlePatchEmployeeById);
 // router.delete('/deleteEmployeeById/:id', HandleDeleteEmployeeById);
