# swagger.json
@@ -77,6 +77,34 @@
               }
             }
           }
+        },
+        "put": {
+          "tags": [
+            "User"
+          ],
+          "summary": "Update user info",
+          "description": "Update user info",
+          "parameters": [
+            {
+              "name": "email",
+              "in": "body",
+              "description": "Email of user that we want to update info upon",
+              "schema": {
+                "$ref": "#/definitions/User"
+              }
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "User info is updated",
+              "schema": {
+                "$ref": "#/definitions/User"
+              }
+            }
+          }
         }
       },
       "/user/{userId}": {
@@ -102,39 +130,51 @@
               }
             }
           }
-        },
-        "delete": {
-          "summary": "Delete user with given ID",
+        }
+      },
+      "/user/name/{name}": {
+        "parameters": [
+          {
+            "name": "username",
+            "in": "path",
+            "required": true,
+            "description": "Username of user that we want to find",
+            "type": "string"
+          }
+        ],
+        "get": {
           "tags": [
             "User"
           ],
+          "summary": "Get user with given username",
           "responses": {
             "200": {
-              "description": "User is deleted",
+              "description": "User is found",
               "schema": {
                 "$ref": "#/definitions/User"
               }
             }
           }
-        },
-        "put": {
-          "summary": "Update user with give ID",
+        }
+      },
+      "/user/email/{email}": {
+        "parameters": [
+          {
+            "name": "email",
+            "in": "path",
+            "required": true,
+            "description": "Email of user that we want to find",
+            "type": "string"
+          }
+        ],
+        "get": {
           "tags": [
             "User"
           ],
-          "parameters": [
-            {
-              "name": "user",
-              "in": "body",
-              "description": "User with new values of properties",
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
-            }
-          ],
+          "summary": "Get user with given email",
           "responses": {
             "200": {
-              "description": "User is updated",
+              "description": "User is found",
               "schema": {
                 "$ref": "#/definitions/User"
               }
@@ -259,7 +299,7 @@
           }
         }
       },
-      "/group/user": {
+      "/group/add-user": {
         "post": {
           "tags": [
             "Group"
@@ -284,6 +324,83 @@
               "description": "User is added to Group",
               "schema": {
                 "$ref": "#/definitions/PostResponseSuccess"
+              }
+            }
+          }
+        }
+      },
+      "/group/user/${userId}": {
+        "get": {
+          "tags": [
+            "Group"
+          ],
+          "summary": "Get groups that user is in with given userId",
+          "description": "Get groups that user is in with given userId",
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/Group"
+              }
+            }
+          }
+        }
+      }, 
+      "/group/user/set-role": {
+        "get": {
+          "tags": [
+            "Group"
+          ],
+          "summary": "Set new role to user",
+          "description": "Set new role to user",
+          "parameters": [
+            {
+              "name": "email",
+              "in": "body",
+              "description": "Email of user that we want to update role upon",
+              "schema": {
+                "$ref": "#/definitions/User"
+              }
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/Group"
+              }
+            }
+          }
+        }
+      }, 
+      "/group/del-user": {
+        "delete": {
+          "tags": [
+            "Group"
+          ],
+          "summary": "Remove a member from group",
+          "description": "Remove a member from group",
+          "parameters": [
+            {
+              "name": "userId",
+              "in": "body",
+              "description": "ID of user that we want to remove from group",
+              "schema": {
+                "$ref": "#/definitions/User"
+              }
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/Group"
               }
             }
           }
@@ -321,16 +438,82 @@
           }
         }
       }, 
+      "/project/user/${userId}": {
+        "get": {
+          "tags": [
+            "Project"
+          ],
+          "summary": "Get project with given user ID",
+          "parameters": [
+            {
+              "name": "userId",
+              "in": "path",
+              "description": "ID of user inside the project",
+              "schema": {
+                "$ref": "#/definitions/User"
+              }
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "Project is return",
+              "schema": {
+                "$ref": "#/definitions/Project"
+              }
+            }
+          }
+        }
+      }, 
+      "/project/user/${email}": {
+        "get": {
+          "tags": [
+            "Project"
+          ],
+          "summary": "Get project with given user email",
+          "parameters": [
+            {
+              "name": "email",
+              "in": "path",
+              "description": "Email of an user inside the project",
+              "schema": {
+                "$ref": "#/definitions/User"
+              }
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "Project is return",
+              "schema": {
+                "$ref": "#/definitions/Project"
+              }
+            }
+          }
+        }
+      }, 
       "/project/group": {
         "post": {
           "tags": ["Project"],
-          "summary": "Add group to project with group name and projectId",
-          "description": "Add group to project with group name and projectId",
+          "summary": "Add a group to project",
+          "description": "Add a group to project",
           "parameters": [
             {
               "name": "group",
               "in": "body",
               "description": "Group name",
+              "schema": {
+                "$ref": "#/definitions/AddGroupToProject"
+              }
+            },
+            {
+              "name": "projectId",
+              "in": "body",
+              "description": "Project ID",
               "schema": {
                 "$ref": "#/definitions/AddGroupToProject"
               }
@@ -344,6 +527,43 @@
               "description": "Group added to Project",
               "schema": {
                 "$ref": "#/definitions/PostResponseSuccess"
+              }
+            }
+          }
+        }
+      },
+      "/project/del-user": {
+        "delete": {
+          "tags": [
+            "Project"
+          ],
+          "summary": "Delete an user from project",
+          "parameters": [
+            {
+              "name": "user",
+              "in": "body",
+              "description": "ID of user inside the project",
+              "schema": {
+                "$ref": "#/definitions/User"
+              }
+            },
+            {
+              "name": "project",
+              "in": "body",
+              "description": "ID of project that user is leaving",
+              "schema": {
+                "$ref": "#/definitions/User"
+              }
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "Project is return",
+              "schema": {
+                "$ref": "#/definitions/Project"
               }
             }
           }
